--- a/src/sass/components/_Modal.scss
+++ b/src/sass/components/_Modal.scss
@@ -38,28 +38,6 @@ $color2: #27aef9;
         height: 40px;
       }
       div {
-        input[type="date"] {
-          cursor: pointer;
-          padding: 8px 10px 8px 12px;
-          border: 1px solid #a5a8b1;
-          color: #a5a8b1;
-          font-family: Montserrat;
-          font-size: 16px;
-          line-height: 100%;
-          opacity: 0.7;
-          border-radius: 8px;
-          height: 40px;
-          width: 160px;
-        }
-        input[type="date"]::-webkit-calendar-picker-indicator {
-          background-position: center;
-          max-width: 100%;
-          padding-right: 5px;
-          height: 20px;
-          width: 20px;
-          background-size: 24px;
-          background: url(../../assets//icon/u_calender.png) no-repeat;
-        }
         input[type="text"] {
           color: #9d9d9d;
           background: #fff;
@@ -144,7 +122,6 @@ $color2: #27aef9;
             }
           }
         }
-        //
         label {
           font-family: Montserrat;
           color: #1e0d03;
@@ -165,15 +142,18 @@ $color2: #27aef9;
           border: none;
           border-radius: 8px;
           outline: none;
-          font: size 12px;
+          font-size: 16px;
           font-family: Montserrat;
           background-color: #f1f4f8;
-          padding: 10px 0 10px 12px;
+          padding: 10px 8px 10px 10px;
+          line-height: 100%;
           width: 148px;
           height: 35px;
+          opacity: 0.7;
         }
-        .price-override {
-          width: 72px;
+        .price-per {
+          width: 82px;
+          display: inline-block;
         }
         .select-css {
           position: relative;
@@ -192,21 +172,21 @@ $color2: #27aef9;
           border-color: #888;
         }
       }
-      .form-note {
-        span {
-          color: #1e0d03;
-          font-size: 12px;
-          font-family: Montserrat;
-          line-height: 15px;
-          line-height: 100%;
-          font-style: italic;
-          opacity: 0.4;
-        }
+    }
+    .label-note {
+      span {
+        color: #1e0d03;
+        font-size: 12px;
+        font-family: Montserrat;
+        line-height: 15px;
+        line-height: 100%;
+        font-style: italic;
+        opacity: 0.4;
       }
-      .check-in {
-        padding: 6px 0;
-        width: 189px;
-      }
+    }
+    .check-in {
+      padding: 6px 0;
+      width: 189px;
     }
   }
 }
@@ -221,4 +201,18 @@ $color2: #27aef9;
   width: auto;
   height: auto;
   padding: 0;
+}
+
+.e-input-group {
+  cursor: pointer;
+  padding: 8px 10px 8px 12px;
+  border: 1px solid #a5a8b1 !important;
+  color: #a5a8b1;
+  font-family: Montserrat;
+  font-size: 16px;
+  line-height: 100%;
+  opacity: 0.7;
+  border-radius: 8px !important;
+  height: 40px;
+  width: 160px !important;
 }
