--- a/src/sass/components/Setting.scss
+++ b/src/sass/components/Setting.scss
@@ -13,8 +13,9 @@
   }
   .option {
     > img {
-      width: 10px;
-      transform: translateX(-25px);
+      width: 23px;
+      transform: translateX(-32px);
+      height: 21px;
     }
   }
 }
