--- a/src/sass/components/_Modal.scss
+++ b/src/sass/components/_Modal.scss
@@ -203,7 +203,7 @@ $color2: #27aef9;
   padding: 0;
 }
 
-.e-input-group {
+.e-date-wrapper {
   cursor: pointer;
   padding: 8px 10px 8px 12px;
   border: 1px solid #a5a8b1 !important;
