--- a/src/sass/components/overrite.scss
+++ b/src/sass/components/overrite.scss
@@ -107,3 +107,34 @@ tbody > tr {
 .gap-90 {
   gap: 90px;
 }
+// SettingPage
+.hXLGuA {
+  margin-top: 32px;
+  border-radius: 0 !important;
+}
+.hBHzWR {
+  display: flex;
+  font-family: Montserrat;
+  width: 100%;
+  color: #1e0d03;
+  font-size: 16px !important;
+  line-height: 133% !important;
+  font-weight: 700 !important;
+}
+.jWpMhA {
+  background-color: #f1f4f8 !important;
+  border-color: #f1f4f8 !important;
+}
+.cKBiPJ:nth-child(2n + 2) {
+  background-color: #f1f4f8;
+}
+.cKBiPJ {
+  font-size: 14px !important;
+  font-weight: 500 !important;
+  line-height: 129% !important;
+  font-family: Montserrat;
+  border-bottom: none !important;
+}
+.cOhUY {
+  border: none !important;
+}
