handle updateSetting && update DB

--- a/src/sass/components/overrite.scss
+++ b/src/sass/components/overrite.scss
@@ -122,6 +122,7 @@ tbody > tr {
   font-weight: 700 !important;
 }
 .jWpMhA {
+  min-height: 42px !important;
   background-color: #f1f4f8 !important;
   border-color: #f1f4f8 !important;
 }
