--- a/src/sass/components/overrite.scss
+++ b/src/sass/components/overrite.scss
@@ -139,3 +139,10 @@ tbody > tr {
 .cOhUY {
   border: none !important;
 }
+// paginate
+.grsa-Dj > select {
+  width: inherit;
+  background: inherit;
+  padding: 0 24px 0 8px;
+  border-radius: 0;
+}
